--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8371,3 +8371,26 @@ button.close {
   font-style: italic;
 }
 
+.error,
+.success {
+  text-align: center;
+}
+
+.error {
+  border: 1px solid red;
+  background-color: #f9b5af;
+  color: red;
+}
+
+.error ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.success {
+  border: 1px solid green;
+  background-color: #d1f9da;
+  color: green;
+}
+
