--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -17,3 +17,25 @@
   color: #aaa;
   font-style: italic;
 }
+
+.error, .success {
+  text-align: center;
+}
+
+.error {
+  border: 1px solid red;
+  background-color: #f9b5af;
+  color: red;
+
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+}
+
+.success {
+  border: 1px solid green;
+  background-color: #d1f9da;
+  color: green;
+}
